[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "odyssey-posbus-client"
dynamic = ["version"]
description = 'Odyssey posbus client'
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
keywords = []
authors = [
  { name = "Jor", email = "js@odyssey.org" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/momentum-xyz/posbus-client/py#readme"
Issues = "https://github.com/momentum-xyz/posbus-client/issues"
Source = "https://github.com/momentum-xyz/posbus-client"

[tool.hatch.version]
source = "vcs"
raw-options.root = "../"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.build.hooks.custom]
dependencies = [
  "pybindgen",
]

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "pybindgen",
]

[tool.hatch.build]
#artifacts = [ ]

[tool.hatch.build.targets.sdist]
#exclude = [ ]

[tool.hatch.build.targets.wheel]
skip-excluded-dirs = true

[tool.cibuildwheel]
build-frontend = "build"
manylinux-x86_64-image = "manylinux_2_28"
before-all = "yum --verbose install -y golang"
environment-pass = ["CFLAGS", "SOURCE_DATE_EPOCH"]
build-verbosity = 3
skip = ["*-musllinux*"] # TODO: has ancient go 1.13

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = "apk add go"

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/odyssey_python_client tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py310"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py310"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["odyssey_python_client"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["odyssey_python_client", "tests"]
branch = true
parallel = true
omit = [
  "src/odyssey_python_client/__about__.py",
]

[tool.coverage.paths]
odyssey_python_client = ["src/odyssey_python_client", "*/odyssey-python-client/src/odyssey_python_client"]
tests = ["tests", "*/odyssey-python-client/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

